[gd_scene load_steps=4 format=3 uid="uid://buhvtb23qpi6p"]

[ext_resource type="Script" path="res://object_duplicate.gd" id="1_vpepg"]
[ext_resource type="Texture2D" uid="uid://rqsb57y7y53" path="res://Assets/iloilo/molo bowl.png" id="2_n2eed"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a48ll"]
size = Vector2(108, 52)

[node name="MoloSoup" type="Node2D"]
script = ExtResource("1_vpepg")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(1.32099, 1)
texture = ExtResource("2_n2eed")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_a48ll")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
